# git-mate

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml
.claude/: settings.json
.claude/skills/review-pr-comments/: SKILL.md
.claude/skills/review-pr-comments/scripts/: pr-comments  pr-reply  pr-resolve
.github/actions/setup-workspace/: action.yml
.github/workflows/: ci.yml  copilot-setup-steps.yml  pull-request.yml  release-pr.yml  release-propose.yml  release-publish.yml  release.yml
src/: complete.rs  fs.rs  git.rs  main.rs  output.rs
src/cmd/: checkout.rs  finish.rs  init.rs  mod.rs  move_cmd.rs  new.rs  protocol.rs  sync.rs  worktree_changes.rs
src/cmd/init/: bash.rs  pwsh.rs  zsh.rs
src/git/: branch.rs  config.rs  mod.rs  refs.rs  remote.rs  run.rs  worktree.rs
src/shell_protocol/: collect.rs  emit.rs  message.rs  mod.rs
src/shell_protocol/interpreter/: bash.rs  mod.rs  pwsh.rs  zsh.rs
tests/: checkout.rs  finish.rs  init.rs  move.rs  new.rs  sync.rs
tests/common/: mod.rs
