[package]
name = "git-mate"
version = "0.2.0"
edition = "2024"
description = "A focused Git CLI extension for branch and sync workflows"
license = "MIT"
repository = "https://github.com/frenetisch-applaudierend/git-mate"
homepage = "https://github.com/frenetisch-applaudierend/git-mate"
readme = "README.md"
keywords = ["git", "cli", "workflow", "branch"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-mate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
console = "0.16"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
